# tp_irgpua

project/: .gitignore
project/project_student/: CMakeLists.txt
project/project_student/src/: main.cu
project/project_student_colab/: CMakeLists.txt
project/project_student_fetch_content/: CMakeLists.txt
project/project_teacher/: CMakeLists.txt  image_preocessing.txt
project/project_teacher/src/: image.hh  main.cu
test/: CMakeLists.txt  test_rmm.cu
tp_reduce/: CMakeLists.txt
tp_reduce/bench/: fixture.hh  main.cc
tp_reduce/src/: to_bench.cu
tp_reduce_colab/: CMakeLists.txt
tp_reduce_colab/bench/: main_helper.hh
tp_reduce_fetch_content/: CMakeLists.txt
tp_reduce_fetch_content/bench/: main_helper.hh
tp_reduce_fetch_content/src/: to_bench.cu
tp_reduce_rmm/: CMakeLists.txt
tp_reduce_rmm/bench/: main.cc  test_helpers.cu  test_helpers.cuh
tp_reduce_rmm/src/: to_bench.cu
tp_scan/: CMakeLists.txt  README.md
tp_scan/bench/: fixture.hh  main.cc  test_helpers.hxx
tp_scan/src/: to_bench.cu
tp_scan_colab/: CMakeLists.txt
tp_scan_colab/bench/: main.cc
tp_scan_fetch_content/: CMakeLists.txt
tp_scan_fetch_content/bench/: main.cc
tp_scan_rmm/: CMakeLists.txt  README.md
